--- a/economic/economic.tex
+++ b/economic/economic.tex
@@ -45,10 +45,10 @@
     	\item оси и подписи к ним, если выбрана столбчатая диаграмма или график;
         \item метки осей - категории, которые задают положение конкретных значений в ряде данных;
     \end{itemize}
-  \item возможность интеграции объекта визуализации в программный комплекс «Web-Исполнение бюджета».
+  \item возможность интеграции объекта визуализации в программный комплекс "Web-Исполнение бюджета".
 \end{itemize}\par
-Представляемая подсистема создана для узкоспециализированной задачи и использования только в рамках программного продукта «Web-Исполнение бюджета».\par
-При изучении рынка специализированного ПО было выявлено, что аналогичные «Web-Исполнению бюджета» системы так же используют подобный функционал. В большинстве этих систем используются комерческие приложения крупных компаний, таких, как Microsoft, Oracle, cluvio и других.\par
+Представляемая подсистема создана для узкоспециализированной задачи и использования только в рамках программного продукта "Web-Исполнение бюджета".\par
+При изучении рынка специализированного ПО было выявлено, что аналогичные "Web-Исполнению бюджета" системы так же используют подобный функционал. В большинстве этих систем используются комерческие приложения крупных компаний, таких, как Microsoft, Oracle, cluvio и других.\par
 Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - это платные коммерческие приложения, которые требуют не разовую оплату продукта, а распространяются по системе подписки.
 
 \subsection{Расчет себестоимости подсистемы}
@@ -66,14 +66,14 @@ Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - эт
 \subsubsection{Материальные затраты}
 Материальные затраты – вид затрат, образующих себестоимость продукции, и представляющий расходы, осуществленные на приобретение необходимых для производства товаров (выполнения работ, оказания услуг) расходуемых материальных ресурсов.\par
 В рамках данной разработки материальные затраты представлены расходами на бумагу, оплата доступа в Интернет и т.п.\par
-Расходы на бумагу и прочее можно считать незначительными и пренебречь ими. Доступ в интернет предоставляется по тарифу 550 рублей в месяц. Разработка велась 3 месяца; таким образом, материальные затраты составили 550$\times$3=1650 (руб.).
+Расходы на бумагу и прочее можно считать незначительными и пренебречь ими. Доступ в интернет предоставляется по тарифу 550 руб. в месяц. Разработка велась 3 месяца; таким образом, материальные затраты составили 550$\times$3=1650 руб.
 
 \subsubsection{Основная заработная плата}
 Размер основной заработной платы (ОЗП) определяется окладом инженера-программиста, количеством разработчиков и сроками разработки:\par
 \begin{equation}
 \label{form1}
 	\text{ОЗП} = \text{СЗП}\times T
-\end{equation}
+\end{equation}\newline
 где\par
 СЗП – стандартная заработная плата (16500 руб.)\par
 T – число месяцев разработки (3 месяцев).\par
@@ -84,18 +84,18 @@ T – число месяцев разработки (3 месяцев).\par
 Размер  ОЗП = 49500 руб.
 
 \subsubsection{Социальные отчисления}
-Отчисления на социальные нужды производятся согласно Федеральному закону №212-ФЗ «О страховых взносах в Пенсионный фонд Российской Федерации, Фонд социального страхования Российской Федерации, Федеральный фонд обязательного медицинского страхования (редакция от 02.04.2014)», который устанавливает следующие тарифы страховых взносов:
+Отчисления на социальные нужды производятся согласно Федеральному закону №212-ФЗ "О страховых взносах в Пенсионный фонд Российской Федерации, Фонд социального страхования Российской Федерации, Федеральный фонд обязательного медицинского страхования (редакция от 02.04.2014)", который устанавливает следующие тарифы страховых взносов:
 \begin{itemize}
   \item Пенсионный фонд Российской Федерации - 22\%;
   \item Фонд социального страхования Российской Федерации - 2,9\%;
   \item Федеральный фонд обязательного медицинского страхования - 5,1\%;
 \end{itemize}\par
-Суммарный процент социальных отчислений $C_o$ составляет $22\% + 2.9\% + 5.1\%$. Соответственно, размер социальных отчислений предриятия на заработную плату равенн:
+Суммарный процент социальных отчислений $C_o$ составляет $22\% + 2,9\% + 5,1\%$. Соответственно, размер социальных отчислений предриятия на заработную плату равенн:
 \begin{equation}
 \label{form3}
 	\text{О}_\text{соц} = \text{ЗП}\times C_o = \text{ЗП}\times 30\%
 \end{equation}\par
-Получаем, что $\text{О}_\text{соц}$ = 14850 (руб.)\par
+Получаем, что $\text{О}_\text{соц}$ = 14850 руб.\par
 Сумма затрат предприятия на заявленную заработную плату работников составляет:
 \begin{equation}
 \label{form4}
@@ -104,7 +104,7 @@ T – число месяцев разработки (3 месяцев).\par
 
 \begin{equation}
 \label{form5}
-	\text{Р}_\text{ЗП}=49500\times(1+0.3)
+	\text{Р}_\text{ЗП}=49500\times(1+0,3)
 \end{equation}\par
 
 \subsubsection{Затраты на машинное время}
@@ -121,7 +121,7 @@ T – число месяцев разработки (3 месяцев).\par
 \label{form7}
 	\text{Счмв}=\frac{\text{Цк}}{\text{Ссл}\times 246\times \text{Вэд}}+\text{РЭ}
 \end{equation}
-где $\text{Ц}_\text{ро}$ – цена рабочего окружения (покупная цена программного и аппаратного обеспечения), руб;\par
+где $\text{Ц}_\text{ро}$ – цена рабочего окружения (покупная цена программного и аппаратного обеспечения);\par
 Ссл – срок службы компьютера, лет;\par
 Вэд – время эксплуатации ЭВМ в день, час;\par
 Рэ – эксплуатационные расходы, руб./час.\par
@@ -146,7 +146,7 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 Рассчитаем стоимость одного часа машинного времени:\par
 \begin{equation}
 \label{form9}
-	\text{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9.07\text{ руб./час}
+	\text{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9,07\text{ руб./час}
 \end{equation}\par
 Возьмем среднее значение рабочих дней в месяц (21 день), время работы вычислительной машины равно 21$\times$3 = 63 (дня), то есть в часах время использования ЭВМ составит:\par
 \begin{equation}
@@ -156,13 +156,13 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 Следовательно, можно найти расходы на машинное время:
 \begin{equation}
 \label{form11}
-	\text{Мвр}=\text{Счмв}\times\text{ВРм}=9.07\times 288 = 2612.16\text{ (руб.)}
+	\text{Мвр}=\text{Счмв}\times\text{ВРм}=9,07\times 288 = 2612,16\text{ руб.}
 \end{equation}
 \subsubsection{Накладные расходы}
-В накладных расходах учитываются расходы на управление, коммунальные услуги, аренду помещения. Величина накладных расходов определяется в процентах от основной заработной платы, составляет 30\%, т.е. 14850 рублей:
+В накладных расходах учитываются расходы на управление, коммунальные услуги, аренду помещения. Величина накладных расходов определяется в процентах от основной заработной платы, составляет 30\%, т.е. 14850 руб.:
 \begin{equation}
 \label{form12}
-	\text{Р}_\text{Н}=49500\times 0.3=14850\text{ (руб.)}
+	\text{Р}_\text{Н}=49500\times 0,3=14850\text{ руб.}
 \end{equation}
 
 \subsubsection{Прочие затраты}
@@ -175,37 +175,35 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 При расчете суммы общих затрат будем исходить из того, что командировочные расходы и расходы на рекламу отсутствуют, а величина коммерческих расходов составляет 2,5\% от производственной себестоимости программного продукта:
 \begin{equation}
 \label{form13}
-	\text{ПР}=(\text{МЗ}+\text{ОЗП}+\text{О}_\text{есн}+\text{Мвр}+\text{Р}_\text{Н})\times 0.25
+	\text{ПР}=(\text{МЗ}+\text{ОЗП}+\text{О}_\text{есн}+\text{Мвр}+\text{Р}_\text{Н})\times 0,025
 \end{equation}
-$$\text{ПР}=(1650+49500+14850+2612.16+14850)\times 0.025=2086.55\text{ (руб.)}$$
+$$\text{ПР}=(1650+49500+14850+2612,16+14850)\times 0,025=2086,55\text{ руб.}$$
 
 \subsubsection{Определение себестоимости разрабатываемой подсистемы}
 Себестоимость разработки программного средства представляет собой сумму затрат по экономическим элементам, приведенным в таблице 1.\par
 \begin{table}[H]
 \caption{Экономические элементы для расчета $\text{П}_\text{себ}$}
-\centering
   \begin{tabular}{|c|c|}
   \hline
   Затраты & Сумма, руб. \\\hline
   Материальные затраты & 1650 \\\hline
   Основная заработная плата & 49500 \\\hline
   Социальные отчисления & 14850 \\\hline
-  Затраты на машинное время & 2612.16 \\\hline
+  Затраты на машинное время & 2612,16 \\\hline
   Накладные расходы & 14850 \\\hline
-  Прочие затраты & 2086.55 \\\hline
-  Итог: & 85548.71 \\
+  Прочие затраты & 2086,55 \\\hline
+  Итог: & 85548,71 \\
   \hline
   \end{tabular}
 \end{table}\par
-Таким образом, стоимость разработки составила 85548.71 (руб.).\par
+Таким образом, стоимость разработки составила 85548,71 руб.\par
 
 \subsection{Оценка эффекта от продажи подсистемы}
 
 \subsubsection{Расчет прибыли от продажи одной копии подсистемы}
-Разрабатываемая подсистема попадает в следующую версию программного комплекса «Web-Исполнения бюджета». На данный момент заказ на неё оформлен 8 заказчиками:\par
+Разрабатываемая подсистема попадает в следующую версию программного комплекса "Web-Исполнения бюджета". На данный момент заказ на неё оформлен 8 заказчиками:\par
 \begin{table}[H]
 \caption{Заказчики, согласившиеся включить в следющее обновление разработанную подсистему}
-\centering
   \begin{tabular}{|c|c|}
   \hline
   № & Наименование \\\hline
@@ -230,33 +228,64 @@ $\text{Ц}$ - цена одной копии;\par
 $\text{НДС}$ - налог на добавленную стоимость;\par
 $\text{З}_\text{р}$ - затраты на реализацию;\par
 N - количество заказчиков.\par
-Цену одной копии возьмем примерно равно 20\% от себестоимости, что равно 17000 руб.
+За цену одной копии возьмем 20\% от себестоимости подсистемы, то есть $85548,71\times 0,2 = 17000$ руб.
 Расчитаем НДС:
 \begin{equation}
 \label{form14}
-	\text{НДС}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}=\frac{17000\times 18\%}{100\%+18\%}=2609,9 \text{ (руб.)}
+	\text{НДС}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}=\frac{17000\times 18\%}{100\%+18\%}=2609,9 \text{ руб.}
 \end{equation}\par
 Расчитаем затраты на реализацию, которые составляют 10\% от себестоимости разработки:
 \begin{equation}
 \label{form15}
-	85548,71\times 0,1 = 8554.87 \text{ (руб.)}
+	85548,71\times 0,1 = 8554,87 \text{ руб.}
 \end{equation}\par
 Таким образом прибыль от продажи одной копии будет составлять:
 \begin{equation}
 \label{form16}
-	\text{П}_\text{ед}=17000-2609,9-\frac{85548.71+8554.87}{8}=2627.15\text{ (руб.)}
+	\text{П}_\text{ед}=17000-2609,9-\frac{85548,71+8554,87}{8}=2627,15\text{ руб.}
 \end{equation}
-Затраты на разработку и реализацию составляют 85548.71 и 8554.87 (руб.) соответственно. Доход от продажи одной копии подсистемы составляет:\par
+Затраты на разработку и реализацию составляют 85548,71 и 8554,87 руб. соответственно. Доход от продажи одной копии подсистемы составляет:\par
 \begin{equation}
 \label{form17}
-	\text{Ц}-\text{\%НДС} = 17000-2609,9 = 14390.1 \text{ (руб.)}
+	\text{Ц}-\text{\%НДС} = 17000-2609,9 = 14390,1 \text{ руб.}
 \end{equation}\par
 Рассчитаем количество копий, которые необходимо продать для окупаемости затрат:\par
 \begin{equation}
 \label{form18}
-	\frac{85548.71+8554.87}{14390.1}=7 \text{ (копий)}
+	\frac{85548,71+8554,87}{14390,1}=7 \text{ (копий)}
 \end{equation}
 После 7 проданных заказчикам копий, дальнейшие продажи будут приносить прибыль.
+
+\subsubsection{Экономический эффект от внедрения подсистемы}
+Подсистема визуализации аналитических отчетов позволит пользователям "Web-Исполнение бюджета" сократить в несколько раз время, затрачиваемое на обновление и сбор данных об организациях.\par
+Критерием эффективности создания и внедрения новых средств автоматизации является ожидаемый экономический эффект. Он определяется по формуле:\par
+\begin{equation}
+\label{form19}
+	\text{Э}=\text{Э}_\text{р}-\text{Е}_\text{н}\times \text{К}_\text{п}
+\end{equation}\par
+где $\text{Э}_\text{р}$ - годовая экономия;\par
+$\text{Е}_\text{н}$ - нормативный коэффициент (0,15);\par
+$\text{К}_\text{п}$ - капитальные затраты на проектирование и внедрение, включая первоначальную стоимость программы.\par
+К капитальным затратам необходимо отнести себестоимость подсистемы 85548,71 руб.\par
+\begin{equation}
+\label{form20}
+	\text{Э}_\text{р}=(\text{Р}_\text{1}-\text{Р}_\text{2})+\Delta\text{Р}_\text{п}
+\end{equation}\par
+Эксплуатационные расходы не снижаются, поэтому при расчете экономии основным показателем будет экономия от повышения производительности труда($\Delta\text{Р}_\text{п}$).\par
+Если учитывать среднюю заработную плату сотрудников федеральных органов государственной власти, работающих с программным комплексом "Web-Исполнением бюджета" - 30 000 руб./месяц, то повышение производительности труда $\text{Р}_i$ (\%) определяется по формуле:\par
+\begin{equation}
+\label{form21}
+	\text{Р}_i=(\frac{\Delta T_j}{F_j-\Delta T_j})\times 100\%
+\end{equation}\par
+где $F_j$ - время, которое планировалось пользователем для выполнения работы j-го вида до внедрения программы;\par
+$\Delta T_j$ - экономия времени с применением доработки.\par
+Если учесть, что сотрудник федерального органа государственной власти обычно тратит 4 часа в день на анализ табличных отчетов, то в месяц у сотрудника уходит 84 часа. Визуализация аналитического отчета увеличит наглядность табличных данных, поэтому преположим, что сотрудник в день станет тратить 1 час на анализ данных, то есть 21 часа в неделю.\par
+Экономия в процентах для подсистемы вычисляется по формуле:
+\begin{equation}
+\label{form22}
+	\text{Р}_i=(\frac{63}{84-63})\times 100\%=300\%
+\end{equation}\par
+Можно заключить, что при использовании доработки сотрудник стал гораздо эффективнее тратить рабочее время, соответственно у него освободилось время на реализацию других задач. Из этого можно сделать вывод, что обеим сторонам будет выгодна данная доработка.
 
 \end{document}
 
