--- a/speach/speach.tex
+++ b/speach/speach.tex
@@ -1,21 +1,38 @@
 \documentclass[a4paper, 12pt]{report}
 \usepackage[utf8]{inputenc}
+\usepackage[T2A]{fontenc}
 \usepackage[russian]{babel}
-\usepackage[left=20mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
+\usepackage[left=20mm, top=20mm, right=20mm, bottom=20mm, nohead, footskip=10mm]{geometry}
+\parindent=1.25cm
+
 \usepackage{enumitem}
-\setlist[enumerate,itemize]{itemindent=1.25cm, leftmargin=0cm}
+\setlist[enumerate,itemize]{itemindent=1.25cm}
+\setlist{nolistsep}
+\renewcommand{\labelitemi}{-}
+
 \begin{document}
 \begin{center}
 	\Large Речь
-\end{center}\par 
-% \textbf{1)} 
-\begin{enumerate}
-\item Добрый день уважаемая комиссия!\par 
-Вашему вниманию предоставляется выпускная квалификационная работа на тему "Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования".\par
-В следствии роста документного потока возникает потребность сокращения текста, свертывания информации или данных в более компактную структуру для улучшения наглядности. 
-Так как ПК "Web-Исполнение бюджета" оперирует значительным объемом бюджетных данных, на основании которых строятся аналитические отчеты, представляемые в табличном виде, 
-появляется потребность в более наглядном представлении этих данных. Было принято решение разработать подсистему визуализации аналитических отчетов.\par
-\item Gthtl 
+\end{center}\par
+\begin{enumerate}[label=\textbf{\arabic*})]
+	\item \textit{(Вступительный слайд)} Добрый день уважаемая комиссия! Вашему вниманию предоставляется выпускная квалификационная работа на тему "Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования".
+	\item \textit{(Бюджетирование)} Разработкой представляемой ВКР я занимался в научно-производственном объединении Криста в отделе разработки ПК "Web-Исполнение", которое работает над автоматизацией процесса бюджетирования. Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
+	\item \textit{(Визуализация информации)} В следствии роста документного потока возникает потребность сокращения текста, свертывания информации или данных в более компактную структуру для улучшения наглядности. Так как ПК "Web-Исполнение бюджета" оперирует значительным объемом бюджетных данных, на основании которых строятся аналитические отчеты, представляемые в табличном виде, появляется потребность в более наглядном представлении этих данных. Было принято решение разработать подсистему визуализации аналитических отчетов.
+	\item \textit{(Цели и задачи)} Целью написания ВКР является повышение наглядности анализа данных в ПК "Web-Исполнения бюджета". Также передо мной стояли следующие задачи, которые необходимо было решить:
+		\begin{itemize}
+			\item задание параметров визуализации;
+			\item конвертирование аналитического в формат удобный для передачи;
+			\item построение визуализации с использованием пользовательских параметров и аналитического источника;
+			\item встраивание разработанных компонентов подсистемы в ПК "Web-Исполнение бюджета".
+		\end{itemize}
+	\item \textit{(Требования к типам визуализаций)} 
+	\item \textit{(Используемый инструментарий)}Для разработки подсистемы визуализации аналитических отчетов были использован следующий инструментарий:
+		\begin{itemize}
+			\item Интеграция подсистемы в ПК "Web-Исполнение бюджета" производилась с помощью языков программирования JAVA и JavaScript, так как платформа ПК написана на этих языках;
+			\item В качестве формата передачи данных был использован текстовый формат JSON;
+			\item Для построения визуализации аналитических данных была использована свободная JavaScript-библиотека D3.js.
+		\end{itemize}
+	\item \textit{(Интерфейс «Аналитические источники данных»)} Для построения визуализации 
 \end{enumerate}
 
 \end{document}
