--- a/speach/speach.tex
+++ b/speach/speach.tex
@@ -16,23 +16,23 @@
 \end{center}\par
 \begin{enumerate}[label=\textbf{\arabic*})]
 	\item \textit{(Вступительный слайд)} Добрый день уважаемая комиссия! Вашему вниманию предоставляется выпускная квалификационная работа на тему "Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования".
-	\item \textit{(Бюджетирование)} Разработкой представляемой ВКР я занимался в научно-производственном объединении Криста в отделе разработки ПК <<Web-Исполнение>>, которое работает над автоматизацией процесса бюджетирования. Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
+	\item \textit{(Бюджетирование)} Разработкой представляемой ВКР я занимался в научно-производственном объединении Криста в отделе разработки ПК <<Web-Исполнение бюджета>>, которое работает над автоматизацией процесса бюджетирования. Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
 	\item \textit{(Визуализация информации)} В следствии роста документного потока возникает потребность сокращения текста, свертывания информации или данных в более компактную структуру для улучшения наглядности. Так как ПК "Web-Исполнение бюджета" оперирует значительным объемом бюджетных данных, на основании которых строятся аналитические отчеты, представляемые в табличном виде, появляется потребность в более наглядном представлении этих данных. Было принято решение разработать подсистему визуализации аналитических отчетов.
 	\item \textit{(Цели и задачи)} Целью написания ВКР является повышение наглядности анализа данных в ПК "Web-Исполнения бюджета". Также передо мной стояли следующие задачи, которые необходимо было решить:
 		\begin{itemize}
 			\item задание параметров визуализации;
-			\item конвертирование аналитического в формат удобный для передачи;
+			\item конвертирование аналитического источника в формат удобный для передачи;
 			\item построение визуализации с использованием пользовательских параметров и аналитического источника;
 			\item встраивание разработанных компонентов подсистемы в ПК <<Web–Ис\-пол\-не\-ние бюджета>>.
 		\end{itemize}
 	\item \textit{(Требования к типам визуализаций)} 
 	\item \textit{(Используемый инструментарий)}Для разработки подсистемы визуализации аналитических отчетов были использован следующий инструментарий:
 		\begin{itemize}
-			\item Интеграция подсистемы в ПК "Web-Исполнение бюджета" производилась с помощью языков программирования JAVA и JavaScript, так как платформа ПК написана на этих языках;
+			\item Интеграция подсистемы в программный компелекс "Web-Исполнение бюджета" производилась с помощью языков программирования JAVA и JavaScript, так как техническая платформа программного комплекса написана на этих языках;
 			\item В качестве формата передачи данных был использован текстовый формат JSON;
 			\item Для построения визуализации аналитических данных была использована свободная JavaScript-библиотека D3.js.
 		\end{itemize}
-	\item \textit{(Интерфейс «Аналитические источники данных»)} Для построения визуализации 
+	\item \textit{(Интерфейс «Аналитические источники данных»)} Для построения визуализации нужны какие-нибудь аналитические данные, необходимо создать аналитический источник данных. Делается это на одноименном интерфейсе
 \end{enumerate}
 
 \end{document}
