--- a/speach/speach.tex
+++ b/speach/speach.tex
@@ -1,8 +1,9 @@
-\documentclass[a4paper, 12pt]{report}
+\documentclass[a4paper]{report}
+\usepackage[14pt]{extsizes}
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
 \usepackage[russian]{babel}
-\usepackage[left=20mm, top=20mm, right=20mm, bottom=20mm, nohead, footskip=10mm]{geometry}
+\usepackage[left=15mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
 \parindent=1.10cm
 
 \usepackage{enumitem}
@@ -12,27 +13,30 @@
 
 \begin{document}
 \begin{center}
-	\Large Речь
-\end{center}\par
+    \Large Речь
+\end{center}
+
 \begin{enumerate}[label=\textbf{\arabic*})]
-	\item \textit{(Вступительный слайд)} Добрый день уважаемая комиссия! Вашему вниманию пре\-доставляется выпускная квалификационная работа на тему <<Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования>>.
-	\item \textit{(Бюджетирование)} Разработкой представляемой ВКР я занимался в научно-произ\-водственном объединении Криста в отделе разработки программного комплекса <<Web-Исполнение бюджета>>, которое работает над автоматизацией процесса бюджетирования. % Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
-	\item \textit{(Визуализация информации)} В следствии роста документного потока возникает потребность сокращения текста, свертывания информации или данных в более компактную структуру для улучшения наглядности. Так как ПК <<Web-Исполнение бюджета>> оперирует значительным объемом бюджетных данных, на основании которых строятся аналитические отчеты, представляемые в табличном виде, появляется потребность в более наглядном представлении этих данных. Было принято решение разработать подсистему визуализации аналитических отчетов.
-	\item \textit{(Цели и задачи)} Целью написания ВКР является повышение наглядности анализа данных в ПК <<Web-Исполнения бюджета>>. Также передо мной стояли следующие задачи, которые необходимо было решить:
-		\begin{itemize}
-			\item позволить пользователям задавать параметров визуализации;
-			\item конвертирование аналитического источника в формат удобный для передачи;
-			\item построение визуализации с использованием пользовательских параметров и \-аналитического источника;
-			\item встраивание разработанных компонентов подсистемы в ПК <<Web–Исполнение бюджета>>.
-		\end{itemize}
-	% \item \textit{(Требования к типам визуализаций)} 
-	\item \textit{(Используемый инструментарий)}Для разработки подсистемы визуализации аналитических отчетов были использован следующий инструментарий:
-		\begin{itemize}
-			\item Интеграция подсистемы в программный компелекс <<Web-Исполнение бюджета>> производилась с помощью языков программирования JAVA иJavaScript, так как техническая платформа программного комплекса написана на этих языках;
-			\item В качестве формата передачи данных был использован формат JSON;
-			\item Для построения визуализации аналитических данных была использована свободная JavaScript-библиотека D3.js.
-		\end{itemize}
-	\item \textit{(Интерфейс <<Аналитические источники данных>>)} Для построения визуализации нужны какие-нибудь аналитические данные, необходимо создать аналитический источник данных. Делается это на одноименном интерфейсе
+    \item \textit{(Вступительный слайд)} Добрый день уважаемая комиссия! Вашему вниманию пре\-доставляется выпускная квалификационная работа на тему <<Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования>>.
+    \item \textit{(Бюджетирование)} Разработкой представляемой ВКР я занимался в научно-произ\-водственном объединении Криста в отделе разработки программного комплекса \-<<Web-Исполнение бюджета>>, которое работает над автоматизацией процесса бюджетирования. % Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
+    \item \textit{(Визуализация информации)} В следствии роста документного потока возникает потребность сокращения текста, свертывания информации или данных в более компактную структуру для улучшения наглядности. Так как программный комплекс <<Web-Исполнение бюджета>> оперирует значительным объемом бюджетных данных, на основании которых строятся аналитические отчеты, представляемые в табличном виде, появляется потребность в более наглядном представлении этих данных. Было принято решение разработать подсистему визуализации аналитических отчетов.
+    \item \textit{(Цели и задачи)} Целью написания ВКР является повышение наглядности анализа данных в программном комплексе <<Web-Исполнения бюджета>>. Для достижения этой цели нужно было решить следующие задачи:
+        \begin{itemize}
+            \item первое - это позволить пользователям задавать параметры визуализации;
+            \item вторая задача - это конвертирование аналитического источника в формат удобный для передачи;
+            \item следующиая задача - это построение визуализации с использованием пользовательских параметров и \-аналитического источника;
+            \item и последнее - это встраивание разработанных компонентов подсистемы в программный <<Web–Исполнение бюджета>>.
+        \end{itemize}
+%   \item \textit{(Требования к типам визуализаций)}
+    \item \textit{(Используемый инструментарий)}Для разработки подсистемы визуализации были использован следующий инструментарий:
+        \begin{itemize}
+            \item Интеграция подсистемы в программный компелекс <<Web-Исполнение бюджета>> производилась с помощью языков программирования JAVA и JavaScript, так как платформа (ядро системы) программного комплекса написана на этих языках;
+            \item В качестве формата передачи данных был использован формат JSON;
+            \item Для построения визуализации аналитических данных была использована свободная JavaScript-библиотека D3.js.
+        \end{itemize}
+    \item \textit{(Интерфейс <<Аналитические источники данных>>)} Для построения визуализации нужны какие-нибудь аналитические данные, для этого в программном комплексе <<Web-Исполнение бюджета>> необходимо создать аналитический источник данных. Делается это на одноименном интерфейсе. Аналитический источник - это \textit{определение аналитического источника, основная концепция в трех словах}.
+    \item \textit{(Интерфейс <<Администратор отчетов>>)} Следующим этапом является создание объекта визуализации на интерфейсе <<Администратор отчетов>>. Для того, чтобы система поняла, что мы хотим создать именно визуализацию отчета необходимо указать формат отчета в одноименной колонке и выбрать шаблон визуализации или создать его, нажав на кнопку Новый шаблон. Для привязки созданного ранее источника данных к объекту визуализации в детализации текущего интерфейса необходимо указать этот источник.
+    \item \textit{(Интерфейс <<Отчеты>>)} После создания аналитического источника данных и оъекта визуализации, можно переходить на интерфейс <<Отчеты>> и нажимать на кнопку <<Выполнить>> для построения визуализаиции.
 \end{enumerate}
 
 \end{document}
