--- a/speach/speach.tex
+++ b/speach/speach.tex
@@ -1,10 +1,12 @@
-\documentclass[a4paper]{report}
+\documentclass[a4paper]{extarticle}
 \usepackage[14pt]{extsizes}
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
 \usepackage[russian]{babel}
 \usepackage[left=15mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
 \parindent=1.10cm
+
+\usepackage{cmap}
 
 \usepackage{enumitem}
 \setlist[enumerate,itemize]{itemindent=1.25pt}
@@ -18,25 +20,22 @@
 
 \begin{enumerate}[label=\textbf{\arabic*})]
     \item \textit{(Вступительный слайд)} Добрый день уважаемая комиссия! Вашему вниманию пре\-доставляется выпускная квалификационная работа на тему <<Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования>>.
-    \item \textit{(Бюджетирование)} Разработкой представляемой ВКР я занимался в научно-произ\-водственном объединении Криста в отделе разработки программного комплекса \-<<Web-Исполнение бюджета>>, которое работает над автоматизацией процесса бюджетирования. % Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
+    \item \textit{(Бюджетирование)} Разработкой представляемой выпускной квалификационной работы я занимался в научно-произ\-водственном объединении Криста в отделе разработки программного комплекса \-<<Web-Исполнение бюджета>>, которое работает над автоматизацией процесса бюджетирования. % Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
     \item \textit{(Визуализация информации)} В следствии роста документного потока возникает потребность сокращения текста, свертывания информации или данных в более компактную структуру для улучшения наглядности. Так как программный комплекс <<Web-Исполнение бюджета>> оперирует значительным объемом бюджетных данных, на основании которых строятся аналитические отчеты, представляемые в табличном виде, появляется потребность в более наглядном представлении этих данных. Было принято решение разработать подсистему визуализации аналитических отчетов.
     \item \textit{(Цели и задачи)} Целью написания ВКР является повышение наглядности анализа данных в программном комплексе <<Web-Исполнения бюджета>>. Для достижения этой цели нужно было решить следующие задачи:
         \begin{itemize}
-            \item первое - это позволить пользователям задавать параметры визуализации;
-            \item вторая задача - это конвертирование аналитического источника в формат удобный для передачи;
-            \item следующиая задача - это построение визуализации с использованием пользовательских параметров и \-аналитического источника;
-            \item и последнее - это встраивание разработанных компонентов подсистемы в программный <<Web–Исполнение бюджета>>.
+            \item во-первых, для построения визуализации пользователю необходимо задать ей определенные параметры, например, тип визуализации (столбчатая диаграмма, график, круговая и т.д.), ее наименование, наименования осей и т.д.;
+            \item во-вторых, аналитический источник данных необходимо конвертировать в формат удобный для передачи;
+            \item третье - это построение визуализации с использованием пользовательских параметров и аналитического источника;
+            \item и последнее - это встраивание разработанных компонентов подсистемы в программный комплекс <<Web–Исполнение бюджета>>.
         \end{itemize}
-%   \item \textit{(Требования к типам визуализаций)}
-    \item \textit{(Используемый инструментарий)}Для разработки подсистемы визуализации были использован следующий инструментарий:
-        \begin{itemize}
-            \item Интеграция подсистемы в программный компелекс <<Web-Исполнение бюджета>> производилась с помощью языков программирования JAVA и JavaScript, так как платформа (ядро системы) программного комплекса написана на этих языках;
-            \item В качестве формата передачи данных был использован формат JSON;
-            \item Для построения визуализации аналитических данных была использована свободная JavaScript-библиотека D3.js.
-        \end{itemize}
-    \item \textit{(Интерфейс <<Аналитические источники данных>>)} Для построения визуализации нужны какие-нибудь аналитические данные, для этого в программном комплексе <<Web-Исполнение бюджета>> необходимо создать аналитический источник данных. Делается это на одноименном интерфейсе. Аналитический источник - это \textit{определение аналитического источника, основная концепция в трех словах}.
-    \item \textit{(Интерфейс <<Администратор отчетов>>)} Следующим этапом является создание объекта визуализации на интерфейсе <<Администратор отчетов>>. Для того, чтобы система поняла, что мы хотим создать именно визуализацию отчета необходимо указать формат отчета в одноименной колонке и выбрать шаблон визуализации или создать его, нажав на кнопку Новый шаблон. Для привязки созданного ранее источника данных к объекту визуализации в детализации текущего интерфейса необходимо указать этот источник.
-    \item \textit{(Интерфейс <<Отчеты>>)} После создания аналитического источника данных и оъекта визуализации, можно переходить на интерфейс <<Отчеты>> и нажимать на кнопку <<Выполнить>> для построения визуализаиции.
+    \item \textit{(Используемый инструментарий)} Платформа программного комплекса <<Web-Исполнение бюджета>> написана на языке Java, а клиентская часть на JavaScript, соответственно в подсистеме будут использованы те же технологии. Для передачи данных сервером клиенту был использован текстовый формат передачи данных JSON, так как он основан на JavaScript языке и легко им разбирается. Для построения графиков и диаграмм была использована свободная JavaScript-библиотека D3.js.
+    \item \textit{(<<Аналитические источники данных>>)} В программном комплексе <<Web-\-Исполнение бюджета>> для предоставления данных для аналитики предусмотрены Аналитические источники данных. Данные в аналитических источниках могут заполняться из базы данных, то есть указывается модель сущности в базе или при помощи комбинирования других аналитических источников. Для построения визуализации необходимо создать источник данных с соответствующими колонками (про сгруппированную столбчатую диаграмму).
+    \item \textit{(Интерфейс <<Администратор отчетов>>)} Добавлять визуализацию в систему решено как еще один вид отчета. До этого в системе были BIRT-отчеты, табличные, я добавил новый вид отчета - визуализация. BIRT-отчеты берут данные из Аналитических источников данных, соответственно и новый вид отчета, визуализация, тоже будет с ними работать. Управление отчетами происходит на форме <<Администратор отчетов>>, где выбирается шаблон отчета, его формат, в моем случае это формат d3diagram и указывается аналитический источник данных, откуда, собственно, и будут браться данные для визуализации.
+	\item \textit{(Редактор шаблона)} Для визуализации был добавлен Редактор шаблона, как у BIRT-отчета, это интерфейс, для задания пользователем параметров визуализации. Здесь можно установить тип диаграммы (столбчатая диаграмма, график, круговая), наименование диаграммы и осей, и наличие легенды. Редактор шаблона предназначен для редактирования файла шаблона визуализации (см. приложение №1). После нажатия галочки в нижнем правом углу модального окна шаблон визуализации перезапишется новой информацией.
+    \item \textit{(Интерфейс <<Отчеты>>)} После создания аналитического источника данных и объекта визуализации, можно переходить на интерфейс <<Отчеты>> и нажимать на кнопку <<Выполнить>> для построения визуализации.
+	\item (БЛА-БЛА-БЛА ВСТАВИТЬ ОПИСАНИЕ ДРУГИХ СЛАЙДОВ)
+	\item \textit{(Реализованные типы диаграмм)} Реализовано три вида диаграмм, это линейный график, круговая диаграмма и столбчатая диаграмма.
 \end{enumerate}
 
 \end{document}
