--- a/speach/speach.tex
+++ b/speach/speach.tex
@@ -22,21 +22,20 @@
     \item \textit{(Вступительный слайд)} Добрый день уважаемая комиссия! Вашему вниманию пре\-доставляется выпускная квалификационная работа на тему <<Разработка подсистемы визуализации аналитических отчетов в системе бюджетирования>>.
     \item \textit{(Бюджетирование)} Разработкой представляемой выпускной квалификационной работы я занимался в научно-произ\-водственном объединении Криста в отделе разработки программного комплекса \-<<Web-Исполнение бюджета>>, которое работает над автоматизацией процесса бюджетирования. % Бюджетирование - это производственно-финансовое планирование деятельности путем составления общего бюджета и бюджетов отдельных объектов.
     \item \textit{(Визуализация информации)} В следствии роста документного потока возникает потребность сокращения текста, свертывания информации или данных в более компактную структуру для улучшения наглядности. Так как программный комплекс <<Web-Исполнение бюджета>> оперирует значительным объемом бюджетных данных, на основании которых строятся аналитические отчеты, представляемые в табличном виде, появляется потребность в более наглядном представлении этих данных. Было принято решение разработать подсистему визуализации аналитических отчетов.
-    \item \textit{(Цели и задачи)} Целью написания ВКР является повышение наглядности анализа данных в программном комплексе <<Web-Исполнения бюджета>>. Для достижения этой цели нужно было решить следующие задачи:
+    \item \textit{(Цели и задачи)} Целью написания выпускной квалификационной работы является повышение наглядности анализа данных в программном комплексе <<Web-Исполнения бюджета>>. Для достижения этой цели нужно было решить следующие задачи:
         \begin{itemize}
             \item во-первых, для построения визуализации пользователю необходимо задать ей определенные параметры, например, тип визуализации (столбчатая диаграмма, график, круговая и т.д.), ее наименование, наименования осей и т.д.;
             \item во-вторых, аналитический источник данных необходимо конвертировать в формат удобный для передачи;
-            \item третье - это построение визуализации с использованием пользовательских параметров и аналитического источника;
+            \item третье - это построение визуализации с использованием заданных ранее пользовательских параметров и аналитического источника;
             \item и последнее - это встраивание разработанных компонентов подсистемы в программный комплекс <<Web–Исполнение бюджета>>.
         \end{itemize}
     \item \textit{(Используемый инструментарий)} Платформа программного комплекса <<Web-Исполнение бюджета>> написана на языке Java, а клиентская часть на JavaScript, соответственно в подсистеме будут использованы те же технологии. Для передачи данных сервером клиенту был использован текстовый формат передачи данных JSON, так как он основан на JavaScript языке и легко им разбирается. Для построения графиков и диаграмм была использована свободная JavaScript-библиотека D3.js.
     \item \textit{(<<Аналитические источники данных>>)} В программном комплексе <<Web-\-Исполнение бюджета>> для предоставления данных для аналитики предусмотрены Аналитические источники данных. Данные в аналитических источниках могут заполняться из базы данных, то есть указывается модель сущности в базе или при помощи комбинирования других аналитических источников. Для построения визуализации необходимо создать источник данных с соответствующими колонками (про сгруппированную столбчатую диаграмму).
     \item \textit{(Интерфейс <<Администратор отчетов>>)} Добавлять визуализацию в систему решено как еще один вид отчета. До этого в системе были BIRT-отчеты, табличные, я добавил новый вид отчета - визуализация. BIRT-отчеты берут данные из Аналитических источников данных, соответственно и новый вид отчета, визуализация, тоже будет с ними работать. Управление отчетами происходит на форме <<Администратор отчетов>>, где выбирается шаблон отчета, его формат, в моем случае это формат d3diagram и указывается аналитический источник данных, откуда, собственно, и будут браться данные для визуализации.
-	\item \textit{(Редактор шаблона)} Для визуализации был добавлен Редактор шаблона как у BIRT-отчета, это интерфейс, для задания пользователем параметров визуализации. Здесь можно установить тип диаграммы (столбчатая диаграмма, график, круговая), наименование диаграммы и осей, и наличие легенды. Редактор шаблона предназначен для редактирования файла шаблона визуализации (см. приложение №1). После нажатия галочки в нижнем правом углу модального окна шаблон визуализации перезапишется новой информацией.
-    \item \textit{(Интерфейс <<Отчеты>>)} После создания аналитического источника данных и объекта визуализации, можно переходить на интерфейс <<Отчеты>>, выбрать созданную визуализацию (она будет помечена специальным символом в виде круговой диаграммы) и нажать на кнопку <<Выполнить>> для построения визуализации.
-	\item \textit{(Диаграмма взаимодействия)} После нажатия пользователем кнопки <<Выполнить>>, клиентский скрипт запрашивает у Web-сервера метаданные формы, в которой требуется отображать визуализацию и данные для построения самой визуализации. В свою очередь Web-сервер начинает формировать запрошенные данные: отправляет запрос Серверу-приложений на получение аналитических данных, а после получения обрабатывает их, преобразуя в JSON-объект и запрашивает из файловой системы файл шаблона для чтения параметров визуализации. После обработки данных и преобразования их в единый JSON-объект, сервер отправляет ответ браузеру, после чего браузер рисует визуализацию в отдельной форме, метаданные которой он получил.
-	\item \textit{(Пример построения визуализации)}Сказать, что, мол, тут мы видим, что диаграмма соответствует ранее заполненному шаблону и выбюорке данных.
-	\item \textit{(Реализованные типы диаграмм)} Реализовано три вида диаграмм, это линейный график, круговая диаграмма и столбчатая диаграмма. Выпускная квалификационная работа и полученные результаты будут иметь практическое значение для ООО «НПО «Криста», так как разработанная подсистема визуализации аналитических отчетов расширит функциональные возможности «Web-Исполнения бюджета».
+	\item \textit{(Редактор шаблона)} Для визуализации был добавлен Редактор шаблона, как у BIRT-отчета, это интерфейс, для задания пользователем параметров визуализации. Здесь можно установить тип диаграммы (столбчатая диаграмма, график, круговая), наименование диаграммы и осей, и наличие легенды. Редактор шаблона предназначен для редактирования файла шаблона визуализации (см. приложение №1). После нажатия галочки в нижнем правом углу модального окна шаблон визуализации перезапишется новой информацией.
+    \item \textit{(Интерфейс <<Отчеты>>)} После создания аналитического источника данных и объекта визуализации, можно переходить на интерфейс <<Отчеты>> и нажимать на кнопку <<Выполнить>> для построения визуализации.
+	\item (БЛА-БЛА-БЛА ВСТАВИТЬ ОПИСАНИЕ ДРУГИХ СЛАЙДОВ)
+	\item \textit{(Реализованные типы диаграмм)} Реализовано три вида диаграмм, это линейный график, круговая диаграмма и столбчатая диаграмма.
 \end{enumerate}
 
 \end{document}
